--- a/web/View/CSS/login.css
+++ b/web/View/CSS/login.css
@@ -1,16 +1,7 @@
-/*
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/CascadeStyleSheet.css to edit this template
-*/
-/* 
-    Created on : May 20, 2024, 11:04:02 PM
-    Author     : nguye
-*/
-
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background: url("../Image/bg_login.png") no-repeat center center fixed;
+    background: url("") no-repeat center center fixed;
     background-size: cover;
     color: #000;
     position: relative;
@@ -35,9 +26,7 @@ body {
 }
 
 .logo img {
-    width: 100px;
-    height: 100px;
-    border-radius: 20%;
+    width: 150px;
     margin-bottom: -10px;
 }
 
@@ -50,7 +39,7 @@ span {
     margin-top: 18px;
 }
 
-.input-group {
+.input-group {  
     display: flex;
     margin: 20px 0;
 }
@@ -64,26 +53,25 @@ span {
     font-size: 16px;
     outline: none;
     transition: border-bottom-color 0.3s;
-}
+} 
 
 .input-group input:focus {
     border-bottom-color: #30c762;
 }
-
 .input-group .input-group-append {
-    display: flex;
-    align-items: end;
-    justify-content: center;
-    border-bottom: 2px solid #c2c7ce;
+  display: flex;
+  align-items: end;
+  justify-content: center; 
+  position: absolute;
+  top: 25px;
+  right: 2px;
 }
 
 .input-group .input-group-append a i {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
-
 .remember-me {
-    display: flex;
-    justify-content: space-between;
+    display: flex; 
     align-items: center;
     margin-bottom: 30px;
     font-size: 14px;
@@ -95,7 +83,7 @@ span {
 }
 
 .remember-me a {
-    margin-left: 7vw;
+    margin-left: 6vw;
     text-decoration: none;
     color: #007bff;
 }
@@ -129,12 +117,12 @@ button {
     background-color: #0056b3;
 }
 
-.sell-btn {
+.login-btn {
     background-color: #28a745;
     color: white;
 }
 
-.sell-btn:hover {
+.login-btn:hover {
     background-color: #218838;
 }
 
@@ -175,4 +163,3 @@ input[type="checkbox"]:checked::before {
     border-width: 0 2px 2px 0;
     transform: translate(-50%, -50%) rotate(45deg);
 }
-
